--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=pathfinder
 quarkus.datasource.password=pathfinder
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/pathfinder
+quarkus.flyway.migrate-at-start=true
+
+%test.quarkus.flyway.locations=db/migration,db/test-data
+%dev.quarkus.flyway.migrate-at-start=false
