--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,14 @@ quarkus.datasource.username=pathfinder
 quarkus.datasource.password=pathfinder
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/pathfinder
 quarkus.flyway.migrate-at-start=true
+quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.bind-parameters=true
 
+# ----- PROD
+%prod.quarkus.hibernate-orm.log.sql=false
+
+# ------ TEST
 %test.quarkus.flyway.locations=db/migration,db/test-data
+
+# ------- DEV
 %dev.quarkus.flyway.migrate-at-start=false
