Moved to plain varchar fields instead of enums Mocked for the moment the retrieval of the user Added deployment yaml
Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,64 @@
+quarkus.application.name=tackle-pathfinder
+
+# REST configuration
+quarkus.http.root-path = /pathfinder
+# requested to have the prototype html page to work
+quarkus.http.cors=true
+quarkus.http.auth.policy.role-policy1.roles-allowed=user,admin
+quarkus.http.auth.permission.roles1.paths=/pathfinder/*
+quarkus.http.auth.permission.roles1.policy=role-policy1
+# 'q' endpoints must be permitted (e.g. the /q/metrics and /q/health endpoints)
+quarkus.http.auth.permission.permit1.paths=/pathfinder/q/*
+quarkus.http.auth.permission.permit1.policy=permit
+
+# Flyway
+quarkus.flyway.migrate-at-start=true
+
+# Datasource
+quarkus.datasource.jdbc.url = jdbc:postgresql://pathfinder-postgresql:5432/pathfinder_db
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=pathfinder
 quarkus.datasource.password=pathfinder
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/pathfinder
-quarkus.flyway.migrate-at-start=true
+
+# Hibernate
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.log.bind-parameters=true
+
+# enabled because useful when checking metrics
+quarkus.micrometer.export.json.enabled=true
+
+# OIDC Configuration
+quarkus.oidc.auth-server-url=http://keycloak:8080/auth/realms/quarkus
+quarkus.oidc.client-id=backend-service
+quarkus.oidc.credentials.secret=secret
+quarkus.oidc.tls.verification=none
+
+# Kubernetes / Openshift
+quarkus.kubernetes.part-of=tackle
+quarkus.openshift.part-of=${quarkus.kubernetes.part-of}
+quarkus.kubernetes.labels."app.kubernetes.io/component"=rest
+quarkus.openshift.labels."app.kubernetes.io/component"=rest
 
 # ----- PROD
 %prod.quarkus.hibernate-orm.log.sql=false
 
 # ------ TEST
 %test.quarkus.flyway.locations=db/migration,db/test-data
+%test.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/pathfinder_db
+%test.quarkus.flyway.locations=db/migration,db/test-data
+
 
 # ------- DEV
 %dev.quarkus.flyway.migrate-at-start=false
+%dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/pathfinder_db
+# bind-parameters (BasicBinder) is at TRACE so min-level must be configured properly
+%dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".min-level=FINER
+%dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".level=FINER
+%dev.quarkus.oidc.auth-server-url=https://localhost:8543/auth/realms/quarkus
+
+
+# -------- Extra profiles
+%local.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/pathfinder_db
+%local.quarkus.oidc.auth-server-url=https://localhost:8543/auth/realms/quarkus
+
+%minikube.quarkus.flyway.locations=db/migration,db/test-data
