Fixed tests and return http codes
Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,7 +45,7 @@ quarkus.openshift.labels."app.kubernetes.io/component"=rest
 # ------ TEST
 %test.quarkus.flyway.locations=db/migration,db/test-data
 %test.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/pathfinder_db
-%test.quarkus.flyway.locations=db/migration,db/test-data
+#%test.quarkus.log.category."org.hibernate".level=trace
 
 
 # ------- DEV
