--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <mapstruct.version>1.4.2.Final</mapstruct.version>
     <lombok.version>1.18.18</lombok.version>
     <testcontainers.version>1.15.2</testcontainers.version>
+    <keycloak.version>12.0.3</keycloak.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -180,16 +181,14 @@
         <version>${surefire-plugin.version}</version>
         <configuration>
           <systemPropertyVariables>
+            <jacoco-agent.destfile>${project.build.directory}/jacoco-ut.exec</jacoco-agent.destfile>
+            <keycloak.version>${keycloak.version}</keycloak.version>
+
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
             <maven.home>${maven.home}</maven.home>
           </systemPropertyVariables>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-    </plugin>
     </plugins>
   </build>
   <profiles>
