upgraded to Quarkus 12 Fixed typo on the deployment yaml Added info to the Readme on how to use the API
Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,15 +47,14 @@ quarkus.openshift.labels."app.kubernetes.io/component"=rest
 %test.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/pathfinder_db
 #%test.quarkus.log.category."org.hibernate".level=trace
 
-
 # ------- DEV
-%dev.quarkus.flyway.migrate-at-start=false
-%dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/pathfinder_db
+%dev.quarkus.flyway.migrate-at-start=true
+%dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5433/pathfinder_db
 # bind-parameters (BasicBinder) is at TRACE so min-level must be configured properly
 %dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".min-level=FINER
 %dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".level=FINER
 %dev.quarkus.oidc.auth-server-url=https://localhost:8543/auth/realms/quarkus
-
+%dev.quarkus.log.level=FINE
 
 # -------- Extra profiles
 %local.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/pathfinder_db
