Changed dev port for the application
Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,6 +55,7 @@ quarkus.openshift.labels."app.kubernetes.io/component"=rest
 %dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".level=FINER
 %dev.quarkus.oidc.auth-server-url=https://localhost:8543/auth/realms/quarkus
 %dev.quarkus.log.level=FINE
+%dev.quarkus.http.port=8085
 
 # -------- Extra profiles
 %local.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/pathfinder_db
