--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -22,7 +22,7 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
-      run: ./mvnw -U -B test --file pom.xml
+      run: ./mvnw -U -B test
 
   integration-native-test:
 
@@ -41,7 +41,7 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
-      run: ./mvnw -U -B verify -Pnative -Dquarkus-profile=test --file pom.xml
+      run: ./mvnw -U -B verify -Pnative -Dquarkus-profile=test
 
   code-coverage:
     runs-on: ubuntu-latest
@@ -59,9 +59,9 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Generate jacoco report
-        run: ./mvnw -U verify -Pjacoco --file pom.xml
+        run: ./mvnw -U verify -Pjacoco
       - uses: codecov/codecov-action@v1
         with:
-          file: ./target/site/jacoco-ut/jacoco.xml
+          file: ./target/site/jacoco/jacoco.xml
           name: codecov
 
