--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,7 +22,7 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
-      run: ./mvnw -U -B test --file pom.xml
+      run: ./mvnw -U -B test
 
   integration-native-test:
 
@@ -41,7 +41,7 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
-      run: ./mvnw -U -B verify -Pnative -Dquarkus-profile=test --file pom.xml
+      run: ./mvnw -U -B verify -Pnative -Dquarkus-profile=test
 
   build-jvm-container:
     name: Build and push JVM image
@@ -64,7 +64,7 @@ jobs:
     - name: Inject slug/short variables
       uses: rlespinasse/github-slug-action@v3.x
     - name: Build Image for main branch with Maven
-      run: ./mvnw -U -B package --file pom.xml -DskipTests -Dquarkus.container-image.push=true -Dquarkus.container-image.group=${{ github.repository_owner }} -Dquarkus.container-image.additional-tags=latest-jar -Dquarkus.container-image.registry=${{ secrets.QUAY_REPO }} -Dquarkus.container-image.username=${{ secrets.QUAY_ROBOT_USERNAME }} -Dquarkus.container-image.password=${{ secrets.QUAY_ROBOT_TOKEN }}
+      run: ./mvnw -U -B package -DskipTests -Dquarkus.container-image.push=true -Dquarkus.container-image.group=${{ github.repository_owner }} -Dquarkus.container-image.additional-tags=latest-jar -Dquarkus.container-image.registry=${{ secrets.QUAY_REPO }} -Dquarkus.container-image.username=${{ secrets.QUAY_ROBOT_USERNAME }} -Dquarkus.container-image.password=${{ secrets.QUAY_ROBOT_TOKEN }}
 
   build-native-container:
     name: Build and push native image
@@ -87,7 +87,7 @@ jobs:
     - name: Inject slug/short variables
       uses: rlespinasse/github-slug-action@v3.x
     - name: Build Image for main branch with Maven
-      run: ./mvnw -U -B package --file pom.xml -Pnative -DskipTests -Dquarkus.container-image.push=true -Dquarkus.container-image.group=${{ github.repository_owner }} -Dquarkus.container-image.additional-tags=latest-native -Dquarkus.container-image.registry=${{ secrets.QUAY_REPO }} -Dquarkus.container-image.username=${{ secrets.QUAY_ROBOT_USERNAME }} -Dquarkus.container-image.password=${{ secrets.QUAY_ROBOT_TOKEN }}
+      run: ./mvnw -U -B package -Pnative -DskipTests -Dquarkus.container-image.push=true -Dquarkus.container-image.group=${{ github.repository_owner }} -Dquarkus.container-image.additional-tags=latest-native -Dquarkus.container-image.registry=${{ secrets.QUAY_REPO }} -Dquarkus.container-image.username=${{ secrets.QUAY_ROBOT_USERNAME }} -Dquarkus.container-image.password=${{ secrets.QUAY_ROBOT_TOKEN }}
 
   code-coverage:
     runs-on: ubuntu-latest
@@ -105,8 +105,8 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Generate jacoco report
-        run: ./mvnw -U verify -Pjacoco --file pom.xml
+        run: ./mvnw -U verify -Pjacoco
       - uses: codecov/codecov-action@v1
         with:
-          file: ./target/site/jacoco-ut/jacoco.xml
+          file: ./target/site/jacoco/jacoco.xml
           name: codecov
