Modified Jacoco to cover the missing classes
Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -64,7 +64,14 @@ jobs:
     - name: Inject slug/short variables
       uses: rlespinasse/github-slug-action@v3.x
     - name: Build Image for main branch with Maven
-      run: ./mvnw -U -B package -DskipTests -Dquarkus.container-image.push=true -Dquarkus.container-image.group=${{ github.repository_owner }} -Dquarkus.container-image.additional-tags=latest-jar -Dquarkus.container-image.registry=${{ secrets.QUAY_REPO }} -Dquarkus.container-image.username=${{ secrets.QUAY_ROBOT_USERNAME }} -Dquarkus.container-image.password=${{ secrets.QUAY_ROBOT_TOKEN }}
+      run: |
+        ./mvnw -U -B package -DskipTests \
+          -Dquarkus.container-image.push=true \
+          -Dquarkus.container-image.group=${{ github.repository_owner }} \
+          -Dquarkus.container-image.additional-tags=latest-jar \
+          -Dquarkus.container-image.registry=${{ secrets.QUAYIO_REPO }} \
+          -Dquarkus.container-image.username=${{ secrets.QUAYIO_USERNAME }} \
+          -Dquarkus.container-image.password=${{ secrets.QUAYIO_PASSWORD }}
 
   build-native-container:
     name: Build and push native image
@@ -87,7 +94,14 @@ jobs:
     - name: Inject slug/short variables
       uses: rlespinasse/github-slug-action@v3.x
     - name: Build Image for main branch with Maven
-      run: ./mvnw -U -B package -Pnative -DskipTests -Dquarkus.container-image.push=true -Dquarkus.container-image.group=${{ github.repository_owner }} -Dquarkus.container-image.additional-tags=latest-native -Dquarkus.container-image.registry=${{ secrets.QUAY_REPO }} -Dquarkus.container-image.username=${{ secrets.QUAY_ROBOT_USERNAME }} -Dquarkus.container-image.password=${{ secrets.QUAY_ROBOT_TOKEN }}
+      run: |
+        ./mvnw -U -B package -Pnative -DskipTests \
+          -Dquarkus.container-image.push=true \
+          -Dquarkus.container-image.group=${{ github.repository_owner }} \
+          -Dquarkus.container-image.additional-tags=latest-native \
+          -Dquarkus.container-image.registry=${{ secrets.QUAYIO_REPO }} \
+          -Dquarkus.container-image.username=${{ secrets.QUAYIO_USERNAME }} \
+          -Dquarkus.container-image.password=${{ secrets.QUAYIO_PASSWORD }}
 
   code-coverage:
     runs-on: ubuntu-latest
