fixed env variable in pipeline
Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -81,7 +81,7 @@ jobs:
               "globals": [
                 {
                   "name": "Authorization",
-                  "values": "Bearer ${{keycloak_token}}"
+                  "values": "Bearer ${{env.keycloak_token}}"
                 } 
               ]
             }
