--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -17,6 +17,7 @@ jobs:
           minikube version: 'v1.16.0'
           kubernetes version: 'v1.19.2'
           github token: ${{ secrets.GITHUB_TOKEN }}
+          driver: docker
       - name: Build Pathfinder image and push it to the minikube docker host
         run: |
           cd ${{github.workspace}}
