--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -18,6 +18,7 @@ jobs:
           kubernetes version: 'v1.19.2'
           github token: ${{ secrets.GITHUB_TOKEN }}
           driver: docker
+          start args: '--addons=registry --addons=ingress'
       - name: Build Pathfinder image and push it to the minikube docker host
         run: |
           cd ${{github.workspace}}
@@ -30,11 +31,12 @@ jobs:
           -Dquarkus.container-image.registry=quay.io \
           -Dquarkus.native.container-build=true
           minikube cache add quay.io/konveyor/tackle-pathfinder:0.0.1-SNAPSHOT-native
-      - name: Install Microcks on minikube
+      - name: Install Helm
         run: |
           wget https://get.helm.sh/helm-v3.5.3-linux-amd64.tar.gz
           tar -zxvf helm-v3.5.3-linux-amd64.tar.gz
-          minikube addons enable ingress
+      - name: Install Microcks on minikube
+        run: |
           ./linux-amd64/helm repo add microcks https://microcks.io/helm
           kubectl create namespace microcks
           ./linux-amd64/helm install microcks microcks/microcks --version 1.2.0 \
@@ -52,9 +54,9 @@ jobs:
             --user backend-service:secret \
             -H 'content-type: application/x-www-form-urlencoded' \
             -d 'username=alice&password=alice&grant_type=password' | jq --raw-output '.access_token' \
-          ) 
+          )
           echo "keycloak_token=$access_token" >> $GITHUB_ENV
-      - name: API simple test
+      - name: API simple tests
         run: |
           test $(curl -X GET "http://$(minikube ip)/pathfinder/assessments?applicationId=10" -H 'Accept: application/json' \
             -H "Authorization: Bearer $access_token" -s -w "%{http_code}") = "[]200" && return 0 || return 1
@@ -83,6 +85,6 @@ jobs:
                 {
                   "name": "Authorization",
                   "values": "Bearer ${{env.keycloak_token}}"
-                } 
+                }
               ]
             }
