fixed issue on pipeline deploy tackle
Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -45,8 +45,8 @@ jobs:
       - name: Deploy Pathfinder on minikube
         run: |
           kubectl create namespace tackle
-          kubectl deploy -f test-deployment.yaml -n tackle
-          kubectl deploy -f src/main/kubernetes/tackle-pathfinder.yaml -n tackle
+          kubectl apply -f src/test/resources/test-deployment.yaml -n tackle
+          kubectl apply -f src/main/kubernetes/tackle-pathfinder.yaml -n tackle
       - name: Get Keycloak token
         run: |
           export access_token=$(\
