--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -56,6 +56,8 @@ jobs:
           echo "keycloak_token=$access_token" >> $GITHUB_ENV
       - name: API simple tests
         run: |
+          curl -X GET "http://$(minikube ip)/pathfinder/assessments?applicationId=10" -H 'Accept: application/json' \
+            -H "Authorization: Bearer $access_token" -s -w "%{http_code}"
           test $(curl -X GET "http://$(minikube ip)/pathfinder/assessments?applicationId=10" -H 'Accept: application/json' \
             -H "Authorization: Bearer $access_token" -s -w "%{http_code}") = "[]200" && exit 0 || exit 1
 #          test $(curl "http://$(minikube ip)/pathfinder/assessments" \
