--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -19,6 +19,12 @@ jobs:
           github token: ${{ secrets.GITHUB_TOKEN }}
           driver: docker
           start args: '--addons=registry --addons=ingress'
+      - name: API simple tests
+        run: |
+          curl -X GET "http://$(minikube ip)/pathfinder/assessments?applicationId=10" -H 'Accept: application/json' \
+            -H "Authorization: Bearer $access_token" -s -w "%{http_code}"
+          test $(curl -X GET "http://$(minikube ip)/pathfinder/assessments?applicationId=10" -H 'Accept: application/json' \
+            -H "Authorization: Bearer $access_token" -s -w "%{http_code}") = "[]200" && exit 0 || exit 1
       - name: Build Pathfinder image and push it to the minikube docker host
         run: |
           cd ${{github.workspace}}
