--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -19,7 +19,7 @@ jobs:
           github token: ${{ secrets.GITHUB_TOKEN }}
           driver: docker
           start args: '--addons=registry --addons=ingress'
-      - name: API simple tests
+      - name: API simple tests 1
         run: |
           curl -X GET "http://$(minikube ip)/pathfinder/assessments?applicationId=10" -H 'Accept: application/json' \
             -H "Authorization: Bearer $access_token" -s -w "%{http_code}"
