--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -23,13 +23,13 @@ jobs:
         run: |
           cd ${{github.workspace}}
           ./mvnw -U -B package -DskipTests -Pnative \
-          -Dquarkus.container-image.push=false \
-          -Dquarkus.container-image.build=true \
-          -Dquarkus.container-image.group=${{ github.repository_owner }} \
-          -Dquarkus.container-image.additional-tags=latest-jar \
-          -Dquarkus.container-image.tag=0.0.1-SNAPSHOT-native \
-          -Dquarkus.container-image.registry=quay.io \
-          -Dquarkus.native.container-build=true
+            -Dquarkus.container-image.push=false \
+            -Dquarkus.container-image.build=true \
+            -Dquarkus.container-image.group=${{ github.repository_owner }} \
+            -Dquarkus.container-image.additional-tags=latest-jar \
+            -Dquarkus.container-image.tag=0.0.1-SNAPSHOT-native \
+            -Dquarkus.container-image.registry=quay.io \
+            -Dquarkus.native.container-build=true
           minikube cache add quay.io/konveyor/tackle-pathfinder:0.0.1-SNAPSHOT-native
       - name: Install Helm
         run: |
@@ -47,24 +47,9 @@ jobs:
           kubectl create namespace tackle
           kubectl apply -f src/test/resources/test-deployment.yaml -n tackle
           kubectl apply -f src/main/kubernetes/tackle-pathfinder.yaml -n tackle
-      - name: Get Keycloak token
-        run: |
-          export access_token=$(curl -X POST "http://$(minikube ip)/auth/realms/quarkus/protocol/openid-connect/token" \
-            --user backend-service:secret \
-            -H 'content-type: application/x-www-form-urlencoded' \
-            -d 'username=alice&password=alice&grant_type=password' | jq --raw-output '.access_token')
-          echo "keycloak_token=$access_token" >> $GITHUB_ENV
       - name: API simple tests
-        run: |
-          curl -X GET "http://$(minikube ip)/pathfinder/assessments?applicationId=10" -H 'Accept: application/json' \
-            -H "Authorization: Bearer $access_token" -s -w "%{http_code}"
-          test $(curl -X GET "http://$(minikube ip)/pathfinder/assessments?applicationId=10" -H 'Accept: application/json' \
-            -H "Authorization: Bearer $access_token" -s -w "%{http_code}") = "[]200"
-#          test $(curl "http://$(minikube ip)/pathfinder/assessments" \
-#            -H 'Content-Type: application/json' -H 'Accept: application/json' -H "Authorization: Bearer $access_token" \
-#            -d '{ "applicationId": 20 }' -s -w "%{http_code}") = "{\"id\":1,\"applicationId\":20,\"status\":\"STARTED\"}201"
-#          test $(curl -X GET "http://$(minikube ip)/pathfinder/assessments?applicationId=20" -H 'Accept: application/json' \
-#            -H "Authorization: Bearer $access_token" -s -w "%{http_code}") = "[{\"id\":1,\"applicationId\":20,\"status\":\"STARTED\"}]200"
+        run: .github/scripts/check_api.sh
+        shell: bash
       - name: Microcks API load
         run: |
           curl -X POST "https://microcks.$(minikube ip).nip.io/api/artifact/upload" -H "accept: text/plain" -H "Content-Type: multipart/form-data" \
