debug and resources requests
Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -54,12 +54,13 @@ jobs:
       - name: Sleep for 60 seconds to allow objects to be created and ready
         uses: jakejarvis/wait-action@master
         with:
-          time: '60s'
+          time: '180s'
       - name: Check status on Minikube
         run : | 
           kubectl get pods -n tackle
           kubectl get pods -n microcks
           kubectl describe deployment tackle-pathfinder -n tackle
+          kubectl describe deployment keycloak -n tackle
       - name: API simple tests
         run: .github/scripts/check_api.sh
         shell: bash
