--- a/src/main/kubernetes/tackle-pathfinder.yaml
+++ b/src/main/kubernetes/tackle-pathfinder.yaml
@@ -250,7 +250,8 @@ spec:
             timeoutSeconds: 10
           resources:
             requests:
-              memory: 0.2Gi
+              memory: "100Mi"
+              cpu: "200m"
             limits:
               memory: 4Gi
               cpu: "4"
