--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -53,7 +53,7 @@ jobs:
           kubectl apply -f src/main/kubernetes/tackle-pathfinder.yaml -n tackle
       - name: Sleep for 500 seconds to allow objects to be created and ready
         run: |
-          timeout 500 bash -c 'while [[ ! "$(kubectl rollout status deployment tackle-pathfinder -n tackle)" =~ "successfulssly" ]]; do kubectl rollout status deployment tackle-pathfinder -n tackle; sleep 5; done' || false
+          timeout 500 bash -c 'while [[ ! "$(kubectl rollout status deployment tackle-pathfinder -n tackle)" =~ "successfully" ]]; do kubectl rollout status deployment tackle-pathfinder -n tackle; sleep 15; done' || false
       - name: Check status on Minikube
         run : |
           kubectl get pods -n tackle
